; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-kvm.c_update_total_count.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-kvm.c_update_total_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_kvm_stat = type { i32, i32, i32 }
%struct.kvm_event = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.perf_kvm_stat*, %struct.kvm_event*)* @update_total_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_total_count(%struct.perf_kvm_stat* %0, %struct.kvm_event* %1) #0 {
  %3 = alloca %struct.perf_kvm_stat*, align 8
  %4 = alloca %struct.kvm_event*, align 8
  %5 = alloca i32, align 4
  store %struct.perf_kvm_stat* %0, %struct.perf_kvm_stat** %3, align 8
  store %struct.kvm_event* %1, %struct.kvm_event** %4, align 8
  %6 = load %struct.perf_kvm_stat*, %struct.perf_kvm_stat** %3, align 8
  %7 = getelementptr inbounds %struct.perf_kvm_stat, %struct.perf_kvm_stat* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %5, align 4
  %9 = load %struct.kvm_event*, %struct.kvm_event** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @get_event_count(%struct.kvm_event* %9, i32 %10)
  %12 = load %struct.perf_kvm_stat*, %struct.perf_kvm_stat** %3, align 8
  %13 = getelementptr inbounds %struct.perf_kvm_stat, %struct.perf_kvm_stat* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = sext i32 %14 to i64
  %16 = add nsw i64 %15, %11
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %13, align 4
  %18 = load %struct.kvm_event*, %struct.kvm_event** %4, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i64 @get_event_time(%struct.kvm_event* %18, i32 %19)
  %21 = load %struct.perf_kvm_stat*, %struct.perf_kvm_stat** %3, align 8
  %22 = getelementptr inbounds %struct.perf_kvm_stat, %struct.perf_kvm_stat* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = sext i32 %23 to i64
  %25 = add nsw i64 %24, %20
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* %22, align 4
  ret void
}

declare dso_local i64 @get_event_count(%struct.kvm_event*, i32) #1

declare dso_local i64 @get_event_time(%struct.kvm_event*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
